tests/snapshots/json_contract__version_apply_json_contract.snap
---
source: tests/json_contract.rs
expression: "json_output(root, &[\"version\", \"apply\", \"--json\"], true)"
---
{
  "adopted": [
    ".changes/lat_core/v1.2.0.md",
    ".changes/lat_mid/v0.5.0.md",
    ".changes/lat_cli/v0.3.1.md"
  ],
  "bumped": [
    {
      "current": "1.2.0",
      "fragments": 1,
      "name": "lat_core",
      "next": "1.3.0",
      "updated_dependencies": []
    },
    {
      "current": "0.5.0",
      "fragments": 0,
      "name": "lat_mid",
      "next": "0.5.1",
      "updated_dependencies": [
        {
          "name": "lat_core",
          "version": "1.3.0"
        }
      ]
    },
    {
      "current": "0.3.1",
      "fragments": 0,
      "name": "lat_cli",
      "next": "0.3.2",
      "updated_dependencies": [
        {
          "name": "lat_core",
          "version": "1.3.0"
        },
        {
          "name": "lat_mid",
          "version": "0.5.1"
        }
      ]
    }
  ],
  "fragments_retained": false,
  "lockfiles": [
    "packages/lat_mid/manifest.toml"
  ],
  "schema": "trellis.version_apply/1"
}
