tests/snapshots/json_contract__version_apply_json_contract_when_nothing_to_do.snap
---
source: tests/json_contract.rs
expression: "json_output(root, &[\"version\", \"apply\", \"--json\"], true)"
---
{
  "bumped": [],
  "lockfiles": [],
  "schema": "trellis.version-apply/1"
}
